Adicionando a funcionalidade softDelete.
